overlap of body content resolved

--- a/hut365/src/app/components/body/body.component.scss
+++ b/hut365/src/app/components/body/body.component.scss
@@ -12,7 +12,7 @@
 
 .body-trimmed {
   width: calc(100% - 16.5625rem);
-  margin-left: 16.5625;
+  margin-left: 16.5625rem;
 }
 
 .body-md-screen {
